--- a/empresas.html
+++ b/empresas.html
@@ -14,29 +14,29 @@
 
 <body id="bodyy">
 
-  <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed">
-    <div class="container">
-      <a class="navbar-brand" href="./index.html"  >
-        <img src="./img/logo/loguito.png" alt="" srcset="">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-          <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
-          <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-        </ul>
+  <body id="bodyy">
+ 
+    <nav class="navbar navbar-expand-lg navbar-light fixed">
+      <div class="container">
+        <a class="navbar-brand" href="./index.html">
+          <img src="./img/logo/loguito.png" alt="" srcset="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+            <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+            <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+            <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+            <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
+            <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  
+    </nav>
 
 
   <section class="container">
@@ -98,9 +98,9 @@
         <!-- Redes Sociales -->
         <div class="col-md-12 text-center">
           <ul class="social-icons">
-            <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
+            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
+            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
           </ul>
           <div class="container text-center mt-3">
             <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
@@ -108,6 +108,7 @@
         </div>
       </div>
   </footer>  
+  
   
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
