--- a/formulario.html
+++ b/formulario.html
@@ -16,28 +16,27 @@
 </head>
 <body id="bodyy">
 
-<!-- Barra de navegación -->
-<nav class="navbar navbar-expand-lg navbar-light fixed">
-  <div class="container">
-    <a class="navbar-brand" href="./index.html" >
-      <img src="./img/logo/loguito.png" alt="" srcset="">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-        <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-        <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
-        <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
-        <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-light fixed">
+    <div class="container">
+      <a class="navbar-brand" href="./index.html">
+        <img src="./img/logo/loguito.png" alt="" srcset="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+          <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
+          <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 
 <!-- Título Nuestros Trabajos -->
@@ -108,9 +107,9 @@
       <!-- Redes Sociales -->
       <div class="col-md-12 text-center">
         <ul class="social-icons">
-          <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-          <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-          <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+          <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
+          <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
+          <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
         </ul>
         <div class="container text-center mt-3">
           <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
