--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <body id="bodyy">
 
 <!-- Barra de navegación -->
+
 <nav class="navbar navbar-expand-lg navbar-light fixed">
   <div class="container">
-    <a class="navbar-brand" href="./index.html" >
+    <a class="navbar-brand" href="./index.html">
       <img src="./img/logo/loguito.png" alt="" srcset="">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,24 +100,24 @@
       </div>
     </div>
   </div>
-
-
-        <footer class="footer">
-          <div class="container">
-            <div class="row">
-              <!-- Redes Sociales -->
-              <div class="col-md-12 text-center">
-                <ul class="social-icons">
-                  <li><a href="#"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-                  <li><a href="#"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-                  <li><a href="#"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
-                </ul>
-                <div class="container text-center mt-3">
-                  <p>&copy; 2023 Cadus. Todos los derechos reservados.</p>
-                </div>
-              </div>
-            </div>
-        </footer>
+  
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <!-- Redes Sociales -->
+        <div class="col-md-12 text-center">
+          <ul class="social-icons">
+            <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
+            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
+            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
+          </ul>
+          <div class="container text-center mt-3">
+            <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
+          </div>
+        </div>
+      </div>
+  </footer>  
+  
         
         
   
