--- a/trabajos.html
+++ b/trabajos.html
@@ -15,10 +15,9 @@
 </head>
 <body id="bodyy">
 
-
   <nav class="navbar navbar-expand-lg navbar-light fixed">
     <div class="container">
-      <a class="navbar-brand" href="./index.html"  >
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo/loguito.png" alt="" srcset="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +36,6 @@
       </div>
     </div>
   </nav>
-
 
 <!-- Título Nuestros Trabajos -->
 <div class="container mt-4" id="tituloo">
@@ -98,9 +96,9 @@
       <!-- Redes Sociales -->
       <div class="col-md-12 text-center">
         <ul class="social-icons">
-          <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-          <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-          <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+          <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
+          <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
+          <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
         </ul>
         <div class="container text-center mt-3">
           <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
